# elpis

./: .gitignore  Cargo.toml
elpis/: Cargo.toml
elpis/src/: consts.rs  lib.rs
elpis/src/config/: boot.rs  game.rs  mod.rs  patch.rs
elpis/src/game/: expansion.rs  locale.rs  mod.rs  platform.rs
elpis_generated/: Cargo.toml  build.rs
elpis_generated/src/: lib.rs
elpis_generator/: Cargo.toml
elpis_generator/src/: lib.rs  main.rs  sheet.rs  struct.rs.template
