[package]
name = "elpis"
version = "0.1.0"
edition = "2021"

[dependencies.elpis_generated]
path = "elpis_generated"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
tracing = "0.1.38"

cached = { version = "0.43.0", features = ["proc_macro"] }
dirs = "5.0.0"
hex = "0.4.3"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
num_cpus = "1.15.0"
os-version = "0.2.0"
serde = { version = "1.0.160", features = ["derive", "std"] }
serde_json = { version = "1.0.96", features = ["std"] }
serde_repr = "0.1.12"
sha1 = "0.10.5"
sys-locale = "0.3.0"
whoami = "1.4.0"

[build-dependencies]
rustc_version = "0.4.0"
